--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -145,17 +145,17 @@ From {{etyl|la}} ''[[consumere]]''.
 ===Verb===
 {{es-verb-form|consumir}}
 
-# {{es-verb form of|ending=ir|mood=imperative|sense=affirmative|pers=2|formal=no|number=singular|[[consumir]]}}
-# {{es-verb form of|ending=ir|mood=indicative|tense=present|pers=2|formal=yes|number=singular|[[consumir]]}}
-# {{es-verb form of|ending=ir|mood=indicative|tense=present|pers=3|number=singular|[[consumir]]}}
+# {{es-verb form of|ending=ir|mood=imperative|sense=affirmative|pers=2|formal=no|number=singular|consumir}}
+# {{es-verb form of|ending=ir|mood=indicative|tense=present|pers=2|formal=yes|number=singular|consumir}}
+# {{es-verb form of|ending=ir|mood=indicative|tense=present|pers=3|number=singular|consumir}}
 
 ===Verb===
 {{es-verb-form|consumar}}
 
-# {{es-verb form of|ending=ar|mood=imperative|pers=2|formal=yes|number=singular|[[consumar]]}}
-# {{es-verb form of|ending=ar|mood=subjunctive|tense=present|pers=1|number=singular|[[consumar]]}}
-# {{es-verb form of|ending=ar|mood=subjunctive|tense=present|pers=2|formal=yes|number=singular|[[consumar]]}}
-# {{es-verb form of|ending=ar|mood=subjunctive|tense=present|pers=3|number=singular|[[consumar]]}}
+# {{es-verb form of|ending=ar|mood=imperative|pers=2|formal=yes|number=singular|consumar}}
+# {{es-verb form of|ending=ar|mood=subjunctive|tense=present|pers=1|number=singular|consumar}}
+# {{es-verb form of|ending=ar|mood=subjunctive|tense=present|pers=2|formal=yes|number=singular|consumar}}
+# {{es-verb form of|ending=ar|mood=subjunctive|tense=present|pers=3|number=singular|consumar}}
 
 [[et:consume]]
 [[el:consume]]
