--- a/en/b/biatch.741988.wikitext
+++ b/en/b/biatch.741988.wikitext
@@ -1,10 +1,7 @@
 ==English==
 
 ===Alternative forms===
-* [[biotch]]
-* [[beatch]]/[[beotch]]
-* [[biyatch]]/[[biyotch]]
-* [[beeyatch]]/[[beeyotch]]
+* [[biotch]], [[beatch]]/[[beotch]], [[biyatch]]/[[biyotch]], [[beeyatch]]/[[beeyotch]], [[bizatch]], [[biznatch]]
 
 ===Pronunciation===
 * {{a|US}} {{IPA|/bi.ɑtʃ/}}
@@ -12,7 +9,7 @@
 ===Noun===
 {{en-noun|es}}
 
-# {{pejorative|slang|[[gangsta]]}} alternative pronunciation of [[bitch]]
+# {{pejorative|slang|[[gangsta]]}} {{alternative form of|bitch}}
 #* '''2002''', Natika Waldon, ''Urban Affairs'', page 197:
 #*: “Fuck you, you son of a bitch!” Dana screamed, trying to cover herself. “Fuck your mamma, '''biatch'''!” he said as he kicked his door shut.
 #* '''2004''', Greg Fox, ''Coming Clean: The Best and Worst of Dailyconfession.Com'', page 76:
