--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -72,6 +72,7 @@
 * Slovak: {{t+|sk|palica|f}}, {{t-|sk|žrď|f}}, {{t-|sk|bakuľa|f}}
 * Spanish: {{t+|es|bastón|m}}, {{t+|es|báculo|m}}
 * Swedish: {{t+|sv|stav|c}}
+* Zulu: {{t|zu|induku}}
 {{trans-bottom}}
 
 {{trans-top|series of horizontal lines}}
