--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -69,7 +69,7 @@ Earlier {{term|seise|lang=en}}, from {{etyl|enm}} {{term|seisen|lang=enm}}, {{te
 * Ottoman Turkish: {{tø|ota|استولى على|tr=istevli ele|sc=ota-Arab}}
 * Portuguese: {{t+|pt|agarrar}}, {{t+|pt|capturar}}
 * Russian: {{t+|ru|захватывать|tr=zaxvátyvat’}} {{impf}}, {{t+|ru|захватить|tr=zaxvatít’}} {{pf.}}, {{t+|ru|схватывать|tr=sxvátyvat’}} {{impf}}, {{t+|ru|схватить|tr=sxvatít’}} {{pf.}}
-* Spanish: {{t+|es|agarrar}}, {{t-|es|apoderarse de}}, {{t-|es|apresar}}
+* Spanish: {{t+|es|agarrar}}, {{t-|es|apoderarse de}}, {{t-|es|apresar}}, {{t|es|aferrar}}
 * Swedish: {{t+|sv|gripa}}, {{t+|sv|fånga}}, {{t+|sv|tillskansa}}
 {{trans-bottom}}
 
