--- a/en/t/Transnistria.741376.wikitext
+++ b/en/t/Transnistria.741376.wikitext
@@ -30,6 +30,7 @@ Literally "beyond the river [[Dniester]]".
 * Chinese:
 *: Mandarin: {{t|zh|涅斯特里亞|sc=Hani}}, {{t|zh|涅斯特里亚|tr=Nièsītèlǐyà|sc=Hani}}, {{t|cmn|德涅斯特河沿岸|tr=Dénièsītèhéyán'àn|sc=Hans}}
 * Czech: {{t-|cs|Podněstří}}
+* Danish: {{t|da|Transnistrien}}
 * Dutch: {{t-|nl|Trans-Nistrië}}
 * Esperanto: {{t-|eo|Ĉednestrio}}, {{t-|eo|Transdnestrio}}, {{t-|eo|Transnistrio}}
 * Estonian: {{t-|et|Transnistria}}
