--- a/en/a/adjustment.4313.wikitext
+++ b/en/a/adjustment.4313.wikitext
@@ -43,15 +43,15 @@
 * {{trreq|gn}}
 * Hebrew: {{t+|he|כוון|m|alt=כִּוּוּן}}
 * Hungarian: {{t|hu|beállítás}}
-{{trans-mid}}
 * Interlingua: [[adjustamento]]
 * Italian: {{t+|it|adattamento|m}}, {{t+|it|inserimento|m}}
+{{trans-mid}}
 * Japanese: [[調整]] (chōsei); [[調節]] (chōsetsu)
 * {{trreq|ko}}
 * Latin: {{t-|la|accommodatio|f|alt=accommodātiō}}
 * Polish: [[ustawienie]] {{n}}, [[regulacja]] {{f}}
 * Portuguese: [[ajustamento]] {{m}}, [[ajuste]] {{m}}
-* Russian: {{t|ru|юстировка|f|tr=justiróvka}}
+* Russian: {{t|ru|юстировка|f|tr=justiróvka}}, {{t|ru|приспосабливание|tr=prisposablivanie|sc=Cyrl}}
 * Slovak: {{t|sk|prispôsobenie|n}}, {{t|sk|úprava|f}}
 * Slovene: [[popravek]] {{m}}
 * Spanish: {{t-|es|ajuste|m}}, {{t|es|modificación|f}}
