--- a/en/b/beheld.6791.wikitext
+++ b/en/b/beheld.6791.wikitext
@@ -6,24 +6,7 @@
 ===Verb===
 '''beheld'''
 
-# {{simple past of|behold}}
-
-====Translations====
-{{trans-top|simple past of "behold"}}
-* Dutch: {{t+|nl|aanschouwde}}
-{{trans-mid}}
-{{trans-bottom}}
-
-===Verb===
-'''beheld'''
-
-# {{past participle of|behold}}
-
-====Translations====
-{{trans-top|past participle of "behold"}}
-* Dutch: {{t+|nl|aanschouwd}}
-{{trans-mid}}
-{{trans-bottom}}
+# {{past of|behold}}
 
 [[de:beheld]]
 [[fa:beheld]]
