--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -27,6 +27,7 @@ From {{etyl|nl}} {{term|bamboe|lang=nl}}, from {{etyl|pt}} {{term|bambu|lang=pt}
 * Albanian: {{t+|sq|bambu}}
 * Arabic: {{t-|ar|خيزران|m|tr=xayzaran, xayzuran|sc=Arab}}
 *: [[Egyptian Arabic]]: {{tø|arz|خيزران|m|tr=xayzaran|sc=Arab}}, {{tø|arz|بامبو|m|tr=bambu|sc=Arab}}
+* Banjarese: {{tø|bjn|buluh}}, {{tø|bjn|paring}}
 * Bengali: {{t-|bn|বাঁশ|tr=bãsh|sc=Beng}}
 * Bulgarian: {{t-|bg|бамбук|m|tr=bambúk}}
 * Catalan: {{t-|ca|bambú|m}}
@@ -42,25 +43,25 @@ From {{etyl|nl}} {{term|bamboe|lang=nl}}, from {{etyl|pt}} {{term|bambu|lang=pt}
 * Hebrew: {{t+|he|במבוק|m|tr=bambuq}}
 * Hindi: {{t-|hi|बांस|tr=bāns|sc=Deva}}
 * Hungarian: {{t+|hu|bambusz}}
-* Indonesian:
-*: Standard Indonesian: [[bambu]], [[buluh]], [[eru]], [[aur]]
-*: Sundanese: [[awi]]
-*: Banjarese: [[paring]], [[buluh]]
-{{trans-mid}}
+* Indonesian: {{t-|id|buluh}}, {{t-|id|bambu}}
 * Italian: {{t+|it|bambù|m}}
+{{trans-mid}}
 * Japanese: {{t+|ja|竹|tr=[[たけ]], take|sc=Jpan}}
 * Kannada: {{t+|kn|ಬಿದಿರು|tr=bidiru|sc=Knda}}
 * Korean: {{t+|ko|대나무|tr=daenamu|sc=Kore}}
 * Lao: {{t-|lo|ໄມ້ໄຜ່|tr=mai-phai|sc=Laoo}}
 * Latin: {{t-|la|harundo Indica|f|alt=harundō Indica}}
 * Macedonian: {{t-|mk|бамбус|m|tr=bámbus}}
-* Malay: {{t-|ms|pokok buluh}}, {{t-|ms|pokok bambu}}
+* Malay:
+*: Rumi: {{t-|ms|pokok buluh}}, {{t-|ms|pokok bambu}}
+*: Jawi: {{t-|ms|ڤوکوق بولوه|sc=Arab}}, {{t-|ms|ڤوکوق بمبو|sc=Arab}}
 * Navajo: {{tø|nv|lókʼaatsoh}}
 * Portuguese: {{t+|pt|bambu|m}}
 * Russian: {{t+|ru|бамбук|m|tr=bambúk|sc=Cyrl}}
 * Serbian: [[trskovača]] {{f}}
 * Slovene: {{t+|sl|bambus|m}}
 * Spanish: {{t-|es|bambú|m}}
+* Sundanese: {{t|su|awi}}
 * Tagalog: [[kawayan]]
 * Thai: {{t-|th|ไผ่|tr=pài|sc=Thai}}
 * Tok Pisin: {{t-|tpi|mambu}}
@@ -80,10 +81,12 @@ From {{etyl|nl}} {{term|bamboe|lang=nl}}, from {{etyl|pt}} {{term|bambu|lang=pt}
 * German: {{t+|de|Bambus|m}}, {{t+|de|Bambusrohr|n}}
 * Hebrew: {{t+|he|במבוק|m|tr=bambuq}}
 * Italian: {{t+|it|bambù|m}}
-{{trans-mid}}
 * Japanese: {{t+|ja|竹|tr=[[たけ]], take|sc=Jpan}}, {{t-|ja|竹材|tr=たけざい, takezai|sc=Jpan}}
+{{trans-mid}}
 * Macedonian: {{t-|mk|бамбус|m|tr=bámbus}}
-* Malay: {{t+|ms|buluh}}, {{t+|ms|bambu}}
+* Malay:
+*: Rumi: {{t-|ms|buluh}}, {{t-|ms|bambu}}
+*: Jawi: {{t-|ms|بولوه|sc=Arab}}, {{t-|ms|بمبو|sc=Arab}}
 * Portuguese: {{t+|pt|bambu|m}}
 * Russian: {{t+|ru|бамбук|m|tr=bambúk|sc=Cyrl}}, {{t-|ru|бамбуковая трость|f|tr=bambúkovaja trostʹ|sc=Cyrl}}
 * Slovene: {{t+|sl|bambus|m}}
