--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -230,6 +230,7 @@ From {{etyl|enm}} {{term|at|lang=enm}}, from {{etyl|ang}} {{term|æt||at, near, 
 ==Dutch==
 
 ===Pronunciation===
+* {{IPA|/ɑt/|lang=nl}}
 * {{rhymes|ɑt|lang=nl}}
 
 ===Verb===
