--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -4,7 +4,7 @@
 From {{etyl|enm}} {{term|simple|lang=enm}}, from {{etyl|fro}} and {{etyl|fr}} {{term|simple|lang=fr}}, from {{etyl|la}} {{term|simplex||simple, literally 'onefold', as opposed to duplex, twofold, double}}, from {{term|sim-||the same}} + {{term|plicare||to fold}}: see [[same]] and [[fold]]. Compare [[single]], [[singular]], [[simultaneous]], etc.
 
 ===Pronunciation===
-* {{IPA|/ˈsɪmpl/}}
+* {{IPA|/ˈsɪmpəl/}}
 * {{audio|en-us-simple.ogg|Audio (US)}}
 * {{audio|En-uk-simple.ogg|Audio (UK)}}
 * {{rhymes|ɪmpəl}}
