--- a/en/a/allochthonous.802822.wikitext
+++ b/en/a/allochthonous.802822.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-{{etyl|grc}} {{term|ἄλλος||other|lang=grc|sc=polytonic}} + {{term|χθών||earth, ground|lang=grc|sc=polytonic|tr=khthōn}}
+{{etyl|grc}} {{term|ἄλλος||other|tr=allos|lang=grc|sc=polytonic}} + {{term|χθών||earth, ground|tr=khthōn|lang=grc|sc=polytonic}}
 
 ===Adjective===
 {{en-adj|-}}
