--- a/en/a/aboil.855995.wikitext
+++ b/en/a/aboil.855995.wikitext
@@ -9,9 +9,9 @@
 ===Adjective===
 {{en-adj}}
 
-# In a [[boil]]; [[boiling]].
+# In a [[boil]]; [[boiling]]. {{defdate|First attested in the mid 19<sup>th</sup> century.}}<ref name=SOED>{{reference-book | last =| first = | authorlink =  | coauthors =  | editor =Brown, Lesley  | others =  | title = The Shorter Oxford English Dictionary | origdate =  | origyear = 1933| origmonth =  | url =  | format =  | accessdate =  | accessyear =  | accessmonth =  | edition = 5th | date =  | year =2003| month =  | publisher =Oxford University Press  | location =Oxford, UK | language =  | id =  | doi = | isbn =978-0-19-860575-7 | lccn = | ol = | pages =6| chapter =  | chapterurl =  | quote =}}</ref>
 #: ''In the kitchen several pots were '''aboil'''.''
-# Figuratively, heated up; [[excited]].
+# Figuratively, heated up; [[excited]]. {{defdate|First attested in the mid 19<sup>th</sup> century.}}<ref name=SOED/>
 #: ''In the drawing room, several conversations were '''aboil'''.''
 
 ====Translations====
@@ -24,6 +24,9 @@
 * Finnish: {{t+|fi|kuuma|alt=kuumana}}
 {{trans-mid}}
 {{trans-bottom}}
+
+===References===
+<references/>
 
 ===Anagrams===
 * [[baloi#English|baloi]]
