--- a/en/a/aboil.855995.wikitext
+++ b/en/a/aboil.855995.wikitext
@@ -26,7 +26,7 @@
 {{trans-bottom}}
 
 ===Adverb===
-{{adv|-}}
+{{en-adv|-}}
 # In a [[boil]]; [[boiling]]. {{defdate|First attested in the mid 19<sup>th</sup> century.}}<ref name=SOED>{{reference-book | last =| first = | authorlink =  | coauthors =  | editor =Brown, Lesley  | others =  | title = The Shorter Oxford English Dictionary | origdate =  | origyear = 1933| origmonth =  | url =  | format =  | accessdate =  | accessyear =  | accessmonth =  | edition = 5th | date =  | year =2003| month =  | publisher =Oxford University Press  | location =Oxford, UK | language =  | id =  | doi = | isbn =978-0-19-860575-7 | lccn = | ol = | pages =6| chapter =  | chapterurl =  | quote =}}</ref>
 # Figuratively, heated up; [[excited]]. {{defdate|First attested in the mid 19<sup>th</sup> century.}}<ref name=SOED/>
 
