--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -39,33 +39,31 @@ From {{etyl|enm}} {{term|bageard||marked by a badge|lang=enm}}, from {{term|bage
 {{rel-bottom}}
 
 =====Translations=====
-{{rfc-tsort|duplicate language: Serbo-Croatian}}
 {{trans-top|mammal}}
-* Afrikaans: [[ratel]]
+* Afrikaans: {{t|af|ratel}}
 * Albanian: {{t+|sq|baldosë|f}}
 * Arabic: {{t-|ar|غرير|m|tr=ġarīr|sc=Arab}}
-* Armenian: {{t-|hy|գորշուկ|tr=goršuk}},  {{t-|hy|փորսուղ|tr=p’orsuġ}},  {{t-|hy|իշղար|tr=išġar}}
+* Armenian: {{t-|hy|գորշուկ|tr=goršuk}}, {{t-|hy|փորսուղ|tr=p’orsuġ}}, {{t-|hy|իշղար|tr=išġar}}
 * Azeri: {{t+|az|porsuq}}
-* Basque: [[azkonar]]
-* Belarusian: {{t-|be|барсук|m|tr=barsúk}}
+* Basque: {{t|eu|azkonar}}
+* Belarusian: {{t-|be|барсук|m|tr=barsúk|sc=Cyrl}}
 * Breton: {{t+|br|broc'h|m}}
-* Bulgarian: {{t+|bg|язовец|m|tr=jázovec}}
-* Catalan: [[teixó]] {{m}}
-* Chechen: [[дIама]]
-* Cherokee: [[ᎢᏃᎵ]] (inoli)
+* Bulgarian: {{t+|bg|язовец|m|tr=jázovec|sc=Cyrl}}
+* Catalan: {{t|ca|teixó|m}}
+* Chechen: {{t|ce|дIама|sc=Cyrl}}
+* Cherokee: {{t|chr|ᎢᏃᎵ|tr=inoli|sc=Cher}}
 * Chinese:
 *: Mandarin: {{t|cmn|獾|tr=huān|sc=Hani}}
-* Serbo-Croatian: {{t-|sh|jazavac|m}}
 * Czech: {{t-|cs|jezevec|m}}
 * Danish: {{t-|da|grævling|c}}
 * Dutch: {{t+|nl|das|m}}
 * Esperanto: {{t-|eo|melo}}
-* Estonian: [[mäger]], [[määr]]
+* Estonian: {{t|et|mäger}}, {{t|et|määr}}
 * Faroese: {{t-|fo|grevlingur|m}}
 * Finnish: {{t+|fi|mäyrä}}
 * French: {{t+|fr|blaireau|m}}
-* Friulian: [[tac]], [[tas]]
-* Galician: [[teixugo]] {{m}}, [[porco teixo]] {{m}}
+* Friulian: {{t|fur|tac}}, {{t|fur|tas}}
+* Galician: {{t|gl|teixugo|m}}, {{t|gl|porco teixo|m}}
 * Georgian: {{t-|ka|მაჩვი|tr=mač’vi|sc=Geor}}
 * German: {{t+|de|Dachs|m}}
 * Gothic: {{tø|got|𐌸𐌰𐌷𐍃𐌿𐍃|m|tr=þahsus|sc=Goth}}
@@ -78,46 +76,46 @@ From {{etyl|enm}} {{term|bageard||marked by a badge|lang=enm}}, from {{term|bage
 * Japanese: {{t-|ja|アナグマ|tr=anaguma}}, {{t-|ja|穴熊|tr=あなぐま, anaguma|sc=Jpan}}
 * Korean: {{t+|ko|오소리|tr=osori|sc=Kore}}
 * Kurdish:
-*: Kurmanji: [[kurbeşk]]
+*: Kurmanji: {{t|kmr|kurbeşk}}
 {{trans-mid}}
-* Ladin: [[tas]]
+* Ladin: {{t|lld|tas}}
 * Lakota: {{tø|lkt|ȟoká}}
 * Latin: {{t|la|meles|f|alt=mēles}}
-* Latvian: [[āpsis]] {{m}}
+* Latvian: {{t|lv|āpsis|m}}
 * Lithuanian: {{t+|lt|barsukas}}, {{t-|lt|opšrus}}
-* Lower Sorbian: [[jazw]], [[šwińc]]
+* Lower Sorbian: {{t|dsb|jazw}}, {{t|dsb|šwińc}}
 * Macedonian: {{t-|mk|јазовец|m|tr=jázovec}}
-* Manx: [[broc]]
+* Manx: {{t|gv|broc}}
 * Mongolian: {{t-|mn|дорго|tr=dorgo|sc=Cyrl}}
 * Navajo: {{tø|nv|nahashchʼidí}}
 * Norwegian: {{t+|no|grevling|m}}
-* Occitan: [[tais]] {{m}}, [[rabàs]] {{m}}
+* Occitan: {{t|oc|tais|m}}, {{t|oc|rabàs|m}}
 * Persian: {{t+|fa|گورکن|tr=gurkan|sc=fa-Arab}}
 * Polish: {{t+|pl|borsuk|m}}
 * Portuguese: {{t+|pt|texugo|m}}
-* Romanian: {{t+|ro|viezure|m}},  {{t+|ro|bursuc|m}}
-* Romansch: [[tais]]
+* Romanian: {{t+|ro|viezure|m}}, {{t+|ro|bursuc|m}}
+* Romansch: {{t|rm|tais}}
 * Russian: {{t+|ru|барсук|m|tr=barsúk}}
 * Sami: [[mievri]]
-* Sardinian: [[tassu]], [[cane de ribu]]
-* Scottish Gaelic: [[broc]] {{m}}
+* Sardinian: {{t|sc|tassu}}, {{t|sc|cane de ribu}}
+* Scottish Gaelic: {{t|gd|broc|m}}
 * Serbo-Croatian:
 *: Cyrillic: {{t-|sh|jазавац|m}}
 *: Roman: {{t-|sh|jazavac|m}}
-* Seri: [[ziix hant ctaxoj]], [[xeezej]]
+* Seri: {{t|sei|ziix hant ctaxoj}}, {{t|sei|xeezej}}
 * Slovak: {{t-|sk|jazvec|m}}
 * Slovene: {{t+|sl|jazbec|m}}
 * Spanish: {{t+|es|tejón|m}}
 * Swahili: {{t-|sw|melesi}}
 * Swedish: {{t+|sv|grävling|c}}
-* Taos: [[kòlno’óna]]
+* Taos: {{t|twf|kòlno’óna}}
 * Turkish: {{t+|tr|porsuk}}
-* Ukrainian: {{t+|uk|борсук|m|tr=borsúk}}
-* Upper Sorbian: [[šwinc]] {{m}}
+* Ukrainian: {{t+|uk|борсук|m|tr=borsúk|sc=Cyrl}}
+* Upper Sorbian: {{t|hsb|šwinc|m}}
 * Vietnamese: {{t-|vi|con lửng}}
 * Volapük: {{t+|vo|daf}}
 * Welsh: {{t+|cy|mochyn daear|m}}, {{t+|cy|broch}}
-* West Frisian: [[das]] {{c}}
+* West Frisian: {{t|fy|das|c}}
 {{trans-bottom}}
 
 {{trans-see|native or resident of Wisconsin|Wisconsinite}}
@@ -139,8 +137,8 @@ From {{etyl|enm}} {{term|bageard||marked by a badge|lang=enm}}, from {{term|bage
 
 =====Translations=====
 {{trans-top|pester}}
-* Armenian: {{t-|hy|հետապնդել|tr=hetapndel}},  {{t-|hy|հալածել|tr=halaçel}},  {{t-|hy|ջղայնացնել|tr=ǰġaynac’nel}},  {{t-|hy|հոգին հանել|tr=hogin hanel}},  {{t-|hy|տեռորի տակ պահել|tr=teṙori tak pahel}}
-* Bulgarian: {{t+|bg|дразня}},  {{t+|bg|безпокоя}}
+* Armenian: {{t-|hy|հետապնդել|tr=hetapndel}}, {{t-|hy|հալածել|tr=halaçel}}, {{t-|hy|ջղայնացնել|tr=ǰġaynac’nel}}, {{t-|hy|հոգին հանել|tr=hogin hanel}}, {{t-|hy|տեռորի տակ պահել|tr=teṙori tak pahel}}
+* Bulgarian: {{t+|bg|дразня|tr=draznja|sc=Cyrl}}, {{t+|bg|безпокоя|tr=bezpokoja|sc=Cyrl}}
 * Dutch: {{t+|nl|lastigvallen}}, {{t+|nl|plagen}}
 * Finnish: {{t+|fi|kiusata}}
 * German: {{t+|de|belästigen}}, {{t+|de|plagen}}, {{t+|de|piesacken}}
@@ -148,7 +146,7 @@ From {{etyl|enm}} {{term|bageard||marked by a badge|lang=enm}}, from {{term|bage
 * Greek: {{t+|el|ταράζω}}, {{t+|el|ζαλίζω}}
 * Hungarian: {{t+|hu|piszkál}}
 * Latin: {{t|la|sollicito|alt=sollicitō}}, {{t|la|inrito|alt=inrītō}}, {{t|la|irrito|alt=irrītō}}
-* Russian: {{t+|ru|дразнить}}
+* Russian: {{t+|ru|дразнить|tr=draznit'|sc=Cyrl}}
 * Spanish: {{t+|es|fastidiar}}, {{t+|es|molestar}}
 * Tok Pisin: [[bagarapim]] [[sindaun]] bilong<!-- if these words make up a single idiom, they should be wikified as a single entity-->
 {{trans-bottom}}
