--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -136,7 +136,7 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 * Latvian: {{t+|lv|cūka|f}}
 * Lithuanian: {{t+|lt|kiaulė|f}}
 * Lower Sorbian: {{tø|dsb|swinja|f}}
-* Macedonian: {{t-|mk|свиња|tr=svinja|f}}
+* Macedonian: {{t-|mk|свиња|tr=svínja|f}}
 * Malay: {{t+|ms|babi}}, {{t+|ms|khinzir}}
 * Malayalam: {{t+|ml|പന്നി|tr=panni|sc=Mlym}}
 * Maltese: {{t-|mt|ħanżir|m}}
