--- a/en/p/pistillation.741394.wikitext
+++ b/en/p/pistillation.741394.wikitext
@@ -6,5 +6,5 @@ From {{etyl|la}} ''[[pistillum]]'' + ''[[-ation]]''.
 ===Noun===
 {{en-noun|-}}
 
-# {{obsolete}} The action of grinding with a [[pestle]].
+# {{obsolete}} The action of pounding with a [[pestle]].
 #* '''1646''': [They] are so far from breaking hammers, that they submit unto '''pistillation''', and resist not an ordinary pestle. — Sir Thomas Browne, ''Pseudodoxia Epidemica'', Book II, ch 5
