--- a/en/2/2 Macc_.801827.wikitext
+++ b/en/2/2 Macc_.801827.wikitext
@@ -1,9 +1,8 @@
 ==English==
 
-==={{abbreviation}}===
-{{head|en|abbreviation}}
+===Proper noun===
+{{en-proper noun}}
 
-# {{biblical}} An abbreviation used for [[2 Maccabees]] of the [[Old Testament]] [[Apocrypha]].
+# {{abbreviation of|2 Maccabees}}
 
-[[Category:en:Books of the Bible]]
 [[Category:English terms spelled with 2]]
