--- a/en/2/2 Sam_.801727.wikitext
+++ b/en/2/2 Sam_.801727.wikitext
@@ -1,12 +1,11 @@
 ==English==
 
-==={{abbreviation}}===
-{{head|en|abbreviation}}
+===Proper noun===
+{{en-proper noun}}
 
-# {{biblical}} An abbreviation used for [[2 Samuel]], an [[Old Testament]] book of the Bible.
+# {{abbreviation of|2 Samuel}}
 
 ====Related terms====
 * [[1 Sam.]]
 
-[[Category:en:Books of the Bible]]
 [[Category:English terms spelled with 2]]
