--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -40,6 +40,20 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 
 ----
 
+==Hakka==
+
+===Hanzi===
+{{hak-hanzi|poj=nyet8|gd=ngiet<sup>8</sup>; nget<sup>8</sup> [Meixian, Dongguan]|hpy=ngiad6}}
+
+# {{defn|lang=hak|sort=月00}}
+
+====References====
+*[http://www.chinalanguage.com/dictionaries/?mode=view&view=chardict&query=%E6%9C%88 CCDICT (Chineselanguage.org)]
+*[http://minhakka.ling.sinica.edu.tw/bkg/hakyin/search.php?DETAIL=1&LIMIT=id=28085&dbname=su_tian_1&graph=2 Academia Sinica - Hakka-English Dictionary]
+*Lau, Chun-fat. ''Hakka Pinyin Dictionary'' (Chinese). [[Hong Kong]]: [[w:Chinese University of Hong Kong|The Chinese University Press]], 1997 <small>(Chinese IME supplement)</small> ISBN 962-201-750-9.
+
+----
+
 ==Japanese==
 
 ===Kanji===
