--- a/en/4/4 Kgs.801724.wikitext
+++ b/en/4/4 Kgs.801724.wikitext
@@ -1,14 +1,13 @@
 ==English==
 
-==={{abbreviation}}===
-{{head|en|abbreviation}}
+===Proper noun===
+{{en-proper noun}}
 
-# {{biblical}} An abbreviation used for [[4 Kings]], an [[Old Testament]] book of the Bible.
+# {{abbreviation of|4 Kings}}
 
 ====Related terms====
 * [[1 Kgs]]
 * [[2 Kgs]]
 * [[3 Kgs]]
 
-[[Category:en:Books of the Bible]]
 [[Category:English terms spelled with 4]]
