--- a/en/j/Josh_.801666.wikitext
+++ b/en/j/Josh_.801666.wikitext
@@ -1,7 +1,6 @@
 ==English==
 
-==={{abbreviation}}===
-{{en-abbr}}
-# {{biblical}} An abbreviation used for the Book of [[Joshua]], an [[Old Testament]] book of the Bible. 
+===Proper noun===
+{{en-proper noun}}
 
-[[Category:en:Books of the Bible]]
+# {{biblical}} {{abbreviation of|Joshua}}
