--- a/en/j/Judg_.801669.wikitext
+++ b/en/j/Judg_.801669.wikitext
@@ -1,7 +1,6 @@
 ==English==
 
-==={{abbreviation}}===
-{{en-abbr}}
-# {{biblical}} An abbreviation used for the book of [[Judges]], an [[Old Testament]] book of the Bible. 
+===Proper noun===
+{{en-proper noun}}
 
-[[Category:en:Books of the Bible]]
+# {{abbreviation of|Judges}}
