--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -59,6 +59,7 @@ From {{etyl|xno}} {{term|esquirel|lang=xno}}, from {{etyl|fro}} {{term|escurel|l
 * Georgian: {{t-|ka|ციყვი|tr=c'iqvi|sc=Geor}}
 * German: {{t+|de|Eichhörnchen|n}}, {{t+|de|Hörnchen|n}}
 * Greek: {{t+|el|σκίουρος|m|tr=skíouros}}
+* Guaraní: {{t|gn|koati}}
 * Hebrew: {{t+|he|סנאי|m|tr=sna'í}}
 * Hindi: {{t-|hi|गिलहरी|f|tr=gilharī|sc=Deva}}
 * Hopi: {{tø|hop|sakuna}}
