--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -21,6 +21,11 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 #* '''2007''', Anthony Ham and Alison Bing, ''Morocco'', Lonely Planet, ISBN 1740599748, page 34
 #*: He was far more interested in bullfighting, which was the '''Nintendo''' of the day, only considerably more dangerous<!--;-->
 
+====Derived terms====
+* [[Nintendinitis]]
+* [[Nintendocore]]
+* [[Nintendo thumb]]
+
 ====Translations====
 {{trans-top|Nintendo Entertainment System, or other video game system made by Nintendo}}
 * Chinese:
