--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -29,7 +29,7 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 ====Translations====
 {{trans-top|Nintendo Entertainment System, or other video game system made by Nintendo}}
 * Chinese:
-*: Mandarin: {{t-|cmn|任天堂|tr=Réntiāntáng|sc=Hani}}
+*: Mandarin: {{t-|cmn|任天堂|tr=Rèntiāntáng|sc=Hani}}
 * Finnish: {{t-|fi|Nintendo}}
 * French: {{t+|fr|Nintendo|f}}
 {{trans-mid}}
