--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -161,7 +161,7 @@ From {{etyl|sqj-pro|sq}} {{recons|bind-|lang=sqj-pro}}, from {{etyl|ine-pro|sq}}
 {{sq-verb|binda|bindur}}
 
 # to [[convince]], [[persuade]], [[amaze]]
-# [[a wonder]]
+# a [[wonder]]
 
 =====Related terms===== 
 * {{l|sq|be}}
