--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -155,7 +155,7 @@ From {{etyl|ang}} {{term|bindan|lang=en}}, from {{etyl|gem-pro|en}} {{recons|bin
 ==Albanian==
 
 ===Etymology===
-From {{etyl|sqj-pro|sq}} {{recons|bind-|lang=sqj-pro}}, from {{etyl|ine-pro|sq}} {{recons|bheidh-|lang=ine-pro}} 'to persuade, encourage; constrain'. Cognate to Ancient Greek {{term|πείθω||to persuade, convince|lang=grc}}.
+From {{etyl|sqj-pro|sq}} {{recons|bind-|lang=sqj-pro}}, from {{etyl|ine-pro|sq}} {{recons|bʰeydʰ-|lang=ine-pro}} 'to persuade, encourage; constrain'. Cognate to Ancient Greek {{term|πείθω||to persuade, convince|lang=grc}}.
 
 ===Verb===
 {{sq-verb|binda|bindur}}
