--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -3,7 +3,8 @@
 
 ===Etymology===
 {{wikipedia|yes and no}}
-From {{etyl|enm}} {{term|ya|lang=enm}} {{fact}}, {{term|ye|lang=enm}}, from {{etyl|ang}} {{term|gea|ġēa|yes|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|ja||yes|lang=gem-pro}}, from {{etyl|ine-pro|en}} {{recons|yē||already|lang=ine-pro}}. Cognate with Dutch {{term|ja|lang=nl}}, German {{term|ja|lang=de}}, Danish {{term|ja|lang=da}}, Bokmål {{term|ja|lang=nb}}, New Norwegian {{term|ja|lang=nn}} and Swedish {{term|ja|lang=sv}}. Related to existing English terms {{term|yes|lang=en}} and {{term|yea|lang=en}}.
+{{rfv-etymology}}
+From {{etyl|enm}} {{term|ya|lang=enm}}, {{term|ye|lang=enm}}, from {{etyl|ang}} {{term|gea|ġēa|yes|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|ja||yes|lang=gem-pro}}, from {{etyl|ine-pro|en}} {{recons|yē||already|lang=ine-pro}}. Cognate with Dutch {{term|ja|lang=nl}}, German {{term|ja|lang=de}}, Danish {{term|ja|lang=da}}, Bokmål {{term|ja|lang=nb}}, New Norwegian {{term|ja|lang=nn}} and Swedish {{term|ja|lang=sv}}. Related to existing English terms {{term|yes|lang=en}} and {{term|yea|lang=en}}.
 
 ===Pronunciation===
 * {{IPA|/jɛ/}}, {{IPAchar|/jɛə/}} or {{IPAchar|/jæ/}}
