--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -49,6 +49,7 @@
 * Dutch: {{t+|nl|fluitje|n}}
 * Finnish: {{t+|fi|pilli}}
 * French: {{t+|fr|sifflet}}
+* Galician: {{t|gl|chifre|m}}
 * German: {{t+|de|Pfeife|f}}, {{t+|de|Trillerpfeife|f}}, {{t+|de|Flöte|f}}
 * Greek: {{t+|el|σφυρίχτρα|f|tr=sfyríchtra|sc=Grek}}
 * Haitian Creole: {{tø|ht|siflèt}}
