--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -6,7 +6,7 @@
 {{rfv-etymology}}
 From a variation of {{term|yea|lang=en}}, from {{etyl|enm}} {{term|ya|lang=enm}}, {{term|ye|lang=enm}}, from {{etyl|ang}} {{term|gea|ġēa|yes|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|ja||yes|lang=gem-pro}}, from {{etyl|ine-pro|en}} {{recons|yē||already|lang=ine-pro}}. Cognate with Dutch {{term|ja|lang=nl}}, German {{term|ja|lang=de}}, Danish {{term|ja|lang=da}}, Bokmål {{term|ja|lang=nb}}, New Norwegian {{term|ja|lang=nn}} and Swedish {{term|ja|lang=sv}}. 
 
-Alternative derivation derives ''yeah'' from a drawling pronunciation of {{term|yes|lang=en}}. See {{l|en|yes}}.
+Alternative derivation derives ''yeah'' from a drawling pronunciation of {{term|yes|lang=en}}. For further etymology, see {{l|en|yes}}.
 
 ===Pronunciation===
 * {{IPA|/jɛ/}}, {{IPAchar|/jɛə/}} or {{IPAchar|/jæ/}}
