--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -12,6 +12,7 @@ From {{etyl|ang}} ''[[wiht]]'', ''ġewiht'', from {{etyl|gem-pro|en}} {{recons|w
 
 ===Noun===
 {{wikipedia}}
+[[File:Poids fonte 1 kg 02.jpg|thumb|Weight (3) for balance.]]
 {{en-noun}}
 
 # The [[force]] on an object due to the gravitational attraction between it and the Earth (or whatever astronomical object it is primarily influenced by).
