--- a/en/m/marten.8230.wikitext
+++ b/en/m/marten.8230.wikitext
@@ -1,7 +1,8 @@
 {{also|Marten|Mårten}}
 ==English==
+{{rfi}}
 {{wikipedia}}
-
+{{wikipedia|Martes}}
 ===Etymology===
 {{etyl|enm}} {{term|martren|lang=enm}}, {{term|martryn|lang=enm}}, from {{etyl|xno}} {{term|martrine|lang=xno}} 'marten fur', from Old Low Franconian *''marþrin'' 'of marten fur' (cf. Middle Dutch {{term|martren|lang=dum}}), from *''marþra'' 'marten' (compare Dutch {{term|marter|lang=nl}}), from {{etyl|gem-pro|en}} {{recons|marþuz|lang=gem-pro}} (compare Low German {{term||Mort}}, West Frisian {{term|murd|lang=fy}} 'polecat', Old English {{term|mearþ|lang=ang}} 'shrew'), originally 'wedding' (cf. Crimean Gothic {{term||marzus}} 'wedding'), from {{etyl|ine-pro|en}} {{recons|martus|lang=ine-pro}} 'bride'. More at [[marry]]. For sense development, compare Italian ''donnola'' 'weasel', from ''donna'' 'lady', Greek ''nyfítsa'' 'weasel', from ''nymfē'' 'bride'.
 
