--- a/en/g/genet.746610.wikitext
+++ b/en/g/genet.746610.wikitext
@@ -14,7 +14,7 @@ From {{etyl|xno}} {{term|genette}}, {{etyl|frm}} {{term|genette}}, {{term|jenett
 ====Noun====
 {{en-noun}}
 
-# Any of several [[Old World]] [[nocturnal]], [[carnivorous]] [[mammal]]s, of the genus ''Genetta'' in the family ''Viverridae'', most of which have a spotted coat and a long, ringed tail.
+# Any of several [[Old World]] [[nocturnal]], [[carnivorous]] [[mammal]]s, of the genus {{taxlink|Genetta|genus}} in the family [[Viverridae]], most of which have a spotted coat and a long, ringed tail.
 
 =====Translations=====
 {{trans-top|mammal of the genus ''Genetta''}}
