--- a/en/e/enumerate.34095.wikitext
+++ b/en/e/enumerate.34095.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From {{etyl|frm|en}} {{term|enumeration|lang=frm}}, from {{etyl|la}} {{term|enumerationem||a counting up|ang=la}}.
+From {{etyl|frm|en}} {{term|enumeration|lang=frm}}, from {{etyl|la}} {{term|enumerationem||a counting up|lang=la}}.
 
 ===Verb===
 {{en-verb|enumerat|ing}}
