--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -3,7 +3,7 @@
 [[File:Grand_Canyon_Horse_Shoe_Bend_MC.jpg|thumb|A bend in a river]]
 
 ===Etymology===
-From {{etyl|enm}} {{term|benden}}, from {{etyl|ang}} {{term|bendan||to bind or bend (a bow), fetter, restrain|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|bandijanan||to bend|lang=gem-pro}}, from {{etyl|ine-pro|en}} {{recons|bʰendʰ-||to bind, tie|lang=ine-pro}}. Cognate with {{etyl|gmh|-}} {{term|benden||to fetter|lang=gmh}}, {{etyl|da|-}} {{term|bænde||to bend|lang=da}}, {{etyl|no|-}} {{term|bende||to bend|lang=no}}, {{etyl|fo|-}} {{term|benda||to bend, inflect|lang=fo}}, {{etyl|is|-}} {{term|benda||to bend|lang=is}}. More at {{l|en|band}}.
+From {{etyl|ine-pro|sq}} {{recons|band|lang=ine-pro}} 'drop'. Probably connected to attested Illyrian [[Bindus]] 'a deity of water'. Compare Phrygian {{term|βεδυ||water|lang=xpg}}, Latin [[Fons Bindusiae]], Cornish {{term|banne|lang=kw}}, {{term|banna||drop|lang=kw}}, Middle Irish {{term|banna|lang=mga}}, {{term|baina||drop|lang=mga}} and Sanskrit {{term|bindú-ḥ||drop|lang=sa}}.
 
 ===Pronunciation===
 * {{IPA|/bɛnd/}}
