--- a/en/s/siphonophore.801198.wikitext
+++ b/en/s/siphonophore.801198.wikitext
@@ -6,7 +6,7 @@
 ===Noun===
 {{en-noun}}
 
-# {{biology}} Any of various [[transparent]] [[marine]] [[hydrozoan]]s, of the order ''{{taxlink|Siphonophora|order}}'', that float or swim as colonies of [[polyp]]s.
+# {{biology}} Any of various [[transparent]] [[marine]] [[hydrozoan]]s, of the order [[Siphonophora]], that float or swim as colonies of [[polyp]]s.
 
 ===See also===
 * {{pedia|Siphonophora}}
