--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -13,6 +13,9 @@ From {{etyl|la}} {{term|species|speciēs|appearance; quality|lang=la}}, from {{t
 ===Noun===
 {{en-noun|species}}
 
+# A [[type]] or [[kind]] of thing.
+#* R. H. Hutton
+#*: What is called spiritualism should, I think, be called a mental '''species''' of materialism.
 # A group of plants or animals having [[similar]] [[appearance]].
 #: ''This '''species''' of animal is unique to the area.''
 # {{context|biology|taxonomy}} A [[rank]] in the classification of [[organism]]s, below [[genus]] and above [[subspecies]]; a [[taxon]] at that rank
