--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -81,6 +81,7 @@
 * Swahili: {{t+|sw|pinda}},  {{t+|sw|kunja}}
 * Swedish: {{t+|sv|böja}}
 * Turkish: {{t+|tr|bükmek}}
+* Vietnamese: {{t|vi|uốn cong}}
 * Walloon: {{t+|wa|ployî}}
 {{trans-bottom}}
 
