--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -191,6 +191,20 @@ From {{etyl|ru|fi}}
 
 ----
 
+==Jèrriais==
+
+===Etymology===
+From {{etyl|en|roa-jer}} {{term|vodka|lang=en}}.
+
+===Noun===
+{{roa-jer-noun|m}}
+
+# [[#English|vodka]]
+
+[[Category:roa-jer:Alcoholic beverages]]
+
+----
+
 ==Norwegian==
 
 ===Etymology===
