--- a/en/a/ADP.26251.wikitext
+++ b/en/a/ADP.26251.wikitext
@@ -1,9 +1,9 @@
 ==English==
 
-==={{initialism}}===
-'''ADP'''
+===Noun===
+{{en-noun|-}}
 
-# {{biochemistry}} [[adenosine diphosphate]]
+# {{initialism of|adenosine diphosphate}}
 
 ===Anagrams===
 * [[dap#English|dap]]
