--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -83,11 +83,13 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|þing|lang=ang||tr=thing}}, from {{e
 * Arabic: {{t+|ar|شيء|m|tr=šayʾ|sc=Arab}}
 * Armenian: {{t-|hy|իր|tr=ir}}, {{t+|hy|բան|tr=ban}}
 * Asturian: {{t-|ast|cosa|f}}
+* Azeri: {{t|az|şey}}
 * Basque: {{t-|eu|gauza}}
 * Belarusian: {{t-|be|рэч|f|tr=reč}}
 * Berber:
 *: Tashelhit: {{tø|shi|taɣawsa|f|tr=taghawsa}}
 * Bulgarian: {{t|bg|вещ|f|tr=vešt|sc=Cyrl}}
+* Burmese: {{t|my|အရာ|tr=aja|sc=Mymr}}
 * Chinese:
 *: Cantonese: {{tø|yue|東西}}, {{tø|yue|东西|tr=dung1 sai1}}, {{tø|yue|物|tr=mat6}}, {{tø|yue|事物|tr=si6 mat6}}
 *: Mandarin: {{t|cmn|東西|sc=Hani}}, {{t|cmn|东西|tr=dōngxi|sc=Hani}}, {{t|cmn|物|tr=wù|sc=Hani}}, {{t|cmn|事物|tr=shìwù|sc=Hani}}
@@ -99,6 +101,7 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|þing|lang=ang||tr=thing}}, from {{e
 * Finnish: {{t+|fi|asia}}, {{t+|fi|esine}}
 * French: {{t+|fr|chose|f}}, {{t+|fr|truc|m}}, {{t+|fr|machin|m}} {{qualifier|informal}}
 * Galician: {{t+|gl|cousa|f}}
+* Georgian: {{t|ka|ნივთი|tr=nivt‘i|sc=Geor}}
 * German: {{t+|de|Ding|n}}
 * Greek: {{t+|el|πράγμα|n|tr=prágma}}
 * Guaraní: {{t+|gn|mba'e}}
@@ -113,7 +116,9 @@ From {{etyl|enm}}, from {{etyl|ang}} {{term|þing|lang=ang||tr=thing}}, from {{e
 * Italian: {{t+|it|cosa|f}}
 * Japanese: {{t+|ja|物|tr=[[もの]], mono|sc=Jpan}}
 {{trans-mid}}
+* {{trreq|Khmer}}
 * Korean: {{t+|ko|물건|tr=mulgeon|sc=Kore}}
+* Lao: {{t|lo|ສິ່ງ|tr=sing|sc=Laoo}}
 * Latin: {{t+|la|res|f|alt=rēs}}, {{t+|la|ens|n}}
 * Latvian: {{t+|lv|lieta}}
 * Lithuanian: {{t+|lt|daiktas|m}}, {{t-|lt|dalykas|m}}
