--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -86,6 +86,7 @@ From {{etyl|frm}} {{term|advertissement||statement calling attention|lang=frm}},
 * Polish: {{t+|pl|reklama|f}}
 * Portuguese: {{t+|pt|anúncio|m}}, {{t+|pt|publicidade|f}}, {{t+|pt|reclame|m}}, {{t+|pt|propaganda|f}}
 * Romanian: {{t-|ro|anunț|n}}  [[publicitate]] {{f}}, {{t-|ro|reclamă|f}}
+* Romansch: {{t|rm|reclama|f}}, {{t|rm|publicitad|f}}
 * Russian: {{t+|ru|реклама|f|tr=rekláma}}, {{t+|ru|объявление|n|tr=ob”javlénije}}, {{t+|ru|анонс|m|tr=anóns}}, {{t+|ru|заявление|n|tr=zajavlénije}}
 * Scottish Gaelic: {{t-|gd|sanas-reic|m}}
 * Serbo-Croatian:
