--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -26,11 +26,12 @@ From {{etyl|enm}} *{{term||quacken|lang=enm}}, {{term|queken||to croak like a fr
 * German: {{t-|de|Quaken|n}}
 * Greek: {{t-|el|πα πα}} (pa pa)
 * Hungarian: {{t-|hu|háp}}
-{{trans-mid}}
 * Icelandic: {{t-|is|andagagg|n}}, {{t-|is|guss|n}}
+{{trans-mid}}
 * Italian: [[qua qua]] {{m}}
 * Japanese: {{t-|ja|ガー ガー|tr=gā-gā}}, {{t-|ja|クェッ クェッ|tr=quek-quek}}, {{t-|ja|クワッ クワッ|tr=quwak-quwak}}
 * Macedonian: {{t-|mk|квак|tr=kvák}}
+* Malay: {{t|ms|wak}}
 * Polish: {{t+|pl|kwa}}
 * Russian: {{t-|ru|кря-кря|tr=kr'a-kr'a}}, {{t+|ru|кряканье|n|tr=kr'ákan'je}}
 * Spanish: {{t-|es|cuac|m}}
