--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -113,7 +113,7 @@ From {{etyl|enm}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|anȝe
 *: Sorani: {{t+|ku|دیسان}}, {{t-|ku|هه‌مدیس}}, {{t-|ku|دوباره‌}}
 * Lao: {{t-|lo|ອີກ|tr='iik|sc=Laoo}}
 * Latin: {{t-|la|denuo}}, {{t-|la|iterum}}
-* Latvian: {{t-|lv|pret}}
+* Latvian: {{t-|lv|atkal}}
 * Lithuanian: {{t+|lt|vėl}}
 * Macedonian: {{t-|mk|пак|tr=pak|sc=Cyrl}}, {{t-|mk|повторно|tr=povtorno|sc=Cyrl}}
 * Malayalam: {{t+|ml|വീണ്ടും|sc=Mlym}}
