--- a/en/o/objective function.774534.wikitext
+++ b/en/o/objective function.774534.wikitext
@@ -8,8 +8,9 @@
 ====Translations====
 {{trans-top|mathematical function}}
 * Czech: {{t-|cs|účelová funkce|f}}, {{t-|cs|cílová funkce|f}}
-{{trans-mid}}
 * Hungarian: {{t-|hu|célfüggvény}}
+{{trans-mid}}
+* Icelandic: {{t|is|kostnaðarfall|n}}, {{t|is|viðfangsfall|n}}
 {{trans-bottom}}
 
 [[ta:objective function]]
