--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -44,6 +44,7 @@ The verb comes from the supposed cunningness of the weasel.
 * Estonian: {{t-|et|nirk}}
 * Finnish: {{t+|fi|lumikko}}
 * French: {{t+|fr|belette|f}}, {{t-|fr|belette d'Europe|f}}, {{t-|fr|belette pygmée|f}}, {{t-|fr|petite belette|f}}
+* Galician: {{t|gl|denociña|f}}
 * German: {{t+|de|Wiesel|n}}, {{t-|de|Mauswiesel|n}}, {{t-|de|Zwergwiesel|n}}, {{t-|de|Kleinwiesel|n}}, {{qualifier|popularly}} {{t-|de|Hermännchen|n}}
 * Greek: {{t+|el|νυφίτσα|tr=nifítsa|f|sc=Grek}}
 *: Ancient: {{tø|grc|γαλῆ|f|sc=polytonic}}
