--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -17,6 +17,9 @@ From {{etyl|enm|en}} {{term|plege|plege|lang=enm}}, from {{etyl|xno|en}} {{term|
 # {{transitive}} To give assurance of friendship by the act of drinking; to drink to one's health.
 #*'''1773''', [[w:Oliver Goldsmith|Oliver Goldsmith]], ''[[s:She Stoops to Conquer|She Stoops to Conquer]]''
 #*:HARDCASTLE [Taking the cup.] I hope you'll find it to your mind. I have prepared it with my own hands, and I believe you'll own the ingredients are tolerable. Will you be so good as to '''pledge''' me, sir? Here, Mr. Marlow, here is to our better acquaintance. [Drinks.]
+#*'''1852''', Matthew Arnold, ''Tristram and Iseult''
+#*:Reach me my golden cup that stands by thee,	        
+#*:And '''pledge''' me in it first for courtesy.
 ====Translations====
 {{trans-top|to make a solemn promise}}
 * Arabic: {{t-|ar|تعهد|alt=تَعَهدَ|sc=Arab}}
