--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -221,6 +221,7 @@ From the noun ''mill''
 # {{transitive}} To [[engrave]] one or more [[groove]]s or a pattern around the edge of (a [[cylindrical]] object such as a coin).
 # {{intransitive}} (''followed by'' '''around''', '''about''', ''etc.'') To move about in an [[aimless]] fashion.
 #: I didn't have much to do, so I just '''milled around''' the town looking at the shops.
+# {{zoology|of air-breathing creatures}} To [[swim]] [[underwater]].
 
 =====Synonyms=====
 * {{sense|move about in an aimless fashion}} [[roam]], [[wander]]
