--- a/en/s/Swiss chard.856482.wikitext
+++ b/en/s/Swiss chard.856482.wikitext
@@ -21,6 +21,7 @@
 {{trans-mid}}
 * Hungarian: {{t+|hu|mángold}}
 * Japanese: {{t|ja|フダンソウ|tr=fudansō|sc=Jpan}}, {{t|ja|不断草|tr=ふだんそう, fudansō|sc=Jpan}}, {{t|ja|スイスチャード|tr=Suisuchādo|sc=Jpan}}
+* Maori: {{t|mi|rau pīti}}
 * Romanian: {{t-|ro|mangold|m}}
 * Russian: {{t|ru|мангольд|m|tr=mangólʹd|sc=Cyrl}}
 {{trans-bottom}}
